--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@powerhousedao/builder-tools": "latest",
     "@powerhousedao/common": "latest",
     "@powerhousedao/design-system": "latest",
+    "@powerhousedao/document-engineering": "^1.32.0",
     "document-model": "latest",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
