working sidebar with workstream editor

--- a/powerhouse.manifest.json
+++ b/powerhouse.manifest.json
@@ -14,7 +14,7 @@
     ],
     "editors": [
         {
-            "id": "powerhouse/workstream-editor",
+            "id": "workstream-editor",
             "name": "Workstream Editor",
             "documentTypes": ["powerhouse/workstream"]
         }
