--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "@powerhousedao/common": "staging",
     "@powerhousedao/design-system": "staging",
     "@powerhousedao/document-engineering": "^1.32.0",
+    "@uiw/react-md-editor": "^4.0.8",
     "document-model": "staging",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
+    "rehype-slug": "^6.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
