--- a/powerhouse.config.json
+++ b/powerhouse.config.json
@@ -12,7 +12,7 @@
   "packages": [
     {
       "packageName": "@powerhousedao/project-management",
-      "version": "latest",
+      "version": "0.0.22",
       "provider": "npm"
     }
   ]
