--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "network-admin",
-  "description": "",
-  "version": "1.0.0",
+  "description": "Network Admin package for Powerhouse",
+  "version": "0.0.1",
   "license": "AGPL-3.0-only",
   "type": "module",
   "files": [
     "/dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
