--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@powerhousedao/design-system": "^5.0.0-staging.22",
     "@powerhousedao/document-engineering": "^1.38.0",
     "@powerhousedao/project-management": "0.0.43",
+    "@powerhousedao/vetra": "5.0.0-staging.25",
     "@uiw/react-md-editor": "^4.0.8",
     "document-model": "^5.0.0-staging.22",
     "error": "^10.4.0",
