--- a/powerhouse.config.json
+++ b/powerhouse.config.json
@@ -14,6 +14,11 @@
       "packageName": "@powerhousedao/project-management",
       "version": "0.0.43",
       "provider": "npm"
+    },
+    {
+      "packageName": "@powerhousedao/vetra",
+      "version": "5.0.0-staging.25",
+      "provider": "npm"
     }
   ]
 }
