--- a/powerhouse.manifest.json
+++ b/powerhouse.manifest.json
@@ -1,10 +1,10 @@
 {
     "name": "network-admin",
     "description": "A place to handle all network related info",
-    "category": "Governance",
+    "category": "Project Management",
     "publisher": {
-        "name": "powerhouse.io",
-        "url": ""
+        "name": "Powerhouse",
+        "url": "https://powerhouse.inc/"
     },
     "documentModels": [
         {
@@ -22,6 +22,10 @@
         {
             "id": "powerhouse/network-profile",
             "name": "Network Profile"
+        },
+        {
+            "id": "powerhouse/builder-profile",
+            "name": "Builder Profile"
         }
     ],
     "editors": [
