add builder profile external pkg

--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
     "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
   },
   "dependencies": {
+    "@powerhousedao/builder-profile": "^0.0.1",
     "@powerhousedao/builder-tools": "^5.0.0-staging.22",
     "@powerhousedao/common": "^5.0.0-staging.22",
     "@powerhousedao/design-system": "^5.0.0-staging.22",
     "@powerhousedao/document-engineering": "^1.38.0",
     "@powerhousedao/project-management": "0.0.43",
-    "@powerhousedao/vetra": "5.0.0-staging.25",
     "@uiw/react-md-editor": "^4.0.8",
     "document-model": "^5.0.0-staging.22",
     "error": "^10.4.0",
