--- a/package.json
+++ b/package.json
@@ -55,14 +55,14 @@
     "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
   },
   "dependencies": {
-    "@powerhousedao/builder-tools": "^5.0.0-staging.22",
-    "@powerhousedao/common": "^5.0.0-staging.22",
-    "@powerhousedao/design-system": "^5.0.0-staging.22",
-    "@powerhousedao/document-engineering": "^1.38.0",
-    "@powerhousedao/project-management": "0.0.43",
-    "@powerhousedao/vetra": "5.0.0-staging.25",
+    "@powerhousedao/builder-tools": "^5.0.0-staging.26",
+    "@powerhousedao/common": "^5.0.0-staging.26",
+    "@powerhousedao/design-system": "^5.0.0-staging.26",
+    "@powerhousedao/document-engineering": "^1.39.0",
+    "@powerhousedao/project-management": "^0.0.30",
+    "@powerhousedao/vetra": "^5.0.0-staging.26",
     "@uiw/react-md-editor": "^4.0.8",
-    "document-model": "^5.0.0-staging.22",
+    "document-model": "^5.0.0-staging.26",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
@@ -74,19 +74,19 @@
     "@electric-sql/pglite": "^0.2.12",
     "@eslint/js": "^9.25.0",
     "@powerhousedao/analytics-engine-core": "^0.5.0",
-    "@powerhousedao/codegen": "^5.0.0-staging.22",
-    "@powerhousedao/ph-cli": "^5.0.0-staging.22",
-    "@powerhousedao/reactor-api": "^5.0.0-staging.22",
-    "@powerhousedao/reactor-browser": "^5.0.0-staging.22",
-    "@powerhousedao/reactor-local": "^5.0.0-staging.22",
+    "@powerhousedao/codegen": "^5.0.0-staging.26",
+    "@powerhousedao/ph-cli": "^5.0.0-staging.26",
+    "@powerhousedao/reactor-api": "^5.0.0-staging.26",
+    "@powerhousedao/reactor-browser": "^5.0.0-staging.26",
+    "@powerhousedao/reactor-local": "^5.0.0-staging.26",
     "@powerhousedao/scalars": "^1.33.1-staging.5",
-    "@powerhousedao/switchboard": "^5.0.0-staging.22",
+    "@powerhousedao/switchboard": "^5.0.0-staging.26",
     "@tailwindcss/cli": "^4.1.4",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.14.1",
     "@types/react": "^18.3.20",
     "@vitejs/plugin-react": "^4.4.1",
-    "document-drive": "^5.0.0-staging.22",
+    "document-drive": "^5.0.0-staging.26",
     "eslint": "^9.25.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
