--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
+    "lucide-react": "^0.546.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "zod": "^3.24.2"
