--- a/powerhouse.manifest.json
+++ b/powerhouse.manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "network-admin",
-    "description": "A place to handle all network related info",
+    "description": "A place to handle all network related info.",
     "category": "Project Management",
     "publisher": {
         "name": "Powerhouse",
