--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,13 +36,9 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
-  "files": [
-    "./powerhouse.manifest.json",
-    "./vite.config.ts",
-    "./vitest.config.ts"
-  ],
-  "include": ["**/*"],
-  "exclude": ["dist", "node_modules", ".ph", "vitest.config.ts"]
+  "files": [ "./powerhouse.manifest.json", "./vite.config.ts", "./vitest.config.ts"],
+  "include": ["**/*",],
+  "exclude": ["dist", "node_modules", ".ph", "vitest.config.ts"],
 }
