--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
     "build:tsc:watch": "tsc --watch",
     "build:css": "npx @tailwindcss/cli -i ./style.css -o ./dist/style.css",
     "build:css:watch": "npx @tailwindcss/cli -i ./style.css -o ./dist/style.css --watch",
-    "build": "bun run build:tsc && bun run build:css",
+    "build": "npm run build:tsc && npm run build:css",
     "test": "vitest run",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "bun run build",
+    "prepublishOnly": "npm run build",
+    "postinstall": "node scripts/fix-project-management.js",
     "generate": "ph-cli generate",
     "connect": "ph-cli connect",
     "reactor": "ph-cli reactor",
@@ -64,10 +65,9 @@
   "dependencies": {
     "@powerhousedao/builder-tools": "^5.0.1-staging.9",
     "@powerhousedao/common": "^5.0.1-staging.9",
-    "@powerhousedao/connect": "5.0.1-staging.9",
     "@powerhousedao/design-system": "^5.0.1-staging.9",
     "@powerhousedao/document-engineering": "^1.39.0",
-    "@powerhousedao/project-management": "0.0.47",
+    "@powerhousedao/project-management": "0.0.49",
     "@sentry/vite-plugin": "^4.6.0",
     "@uiw/react-md-editor": "^4.0.8",
     "document-model": "^5.0.1-staging.9",
@@ -82,17 +82,19 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@electric-sql/pglite": "^0.2.12",
-    "@eslint/js": "^9.25.0",
+    "@openfeature/core": "^1.9.1",
+    "@electric-sql/pglite": "^0.2.17",
+    "@eslint/js": "^9.37.0",
     "@powerhousedao/analytics-engine-core": "^0.5.0",
     "@powerhousedao/codegen": "^5.0.1-staging.9",
+    "@powerhousedao/config": "^5.0.1-staging.9",
+    "@powerhousedao/connect": "^5.0.1-staging.9",
     "@powerhousedao/ph-cli": "^5.0.1-staging.9",
     "@powerhousedao/reactor-api": "^5.0.1-staging.9",
     "@powerhousedao/reactor-browser": "^5.0.1-staging.9",
     "@powerhousedao/reactor-local": "^5.0.1-staging.9",
-    "@powerhousedao/scalars": "^1.33.1-staging.5",
+    "@powerhousedao/scalars": "2.0.1",
     "@powerhousedao/switchboard": "^5.0.1-staging.9",
-    "@testing-library/react": "^16.3.0",
     "@tailwindcss/cli": "^4.1.14",
     "@types/node": "^22.13.11",
     "@types/react": "^19.2.2",
@@ -103,7 +105,6 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.0.0",
-    "package-manager-detector": "^0.2.8",
     "pm2": "^5.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
