--- a/package.json
+++ b/package.json
@@ -63,14 +63,13 @@
     "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
   },
   "dependencies": {
-    "@powerhousedao/builder-tools": "^5.0.1-staging.9",
-    "@powerhousedao/common": "^5.0.1-staging.9",
-    "@powerhousedao/design-system": "^5.0.1-staging.9",
+    "@powerhousedao/builder-tools": "dev",
+    "@powerhousedao/common": "dev",
+    "@powerhousedao/design-system": "dev",
     "@powerhousedao/document-engineering": "^1.39.0",
-    "@powerhousedao/project-management": "0.0.49",
     "@sentry/vite-plugin": "^4.6.0",
     "@uiw/react-md-editor": "^4.0.8",
-    "document-model": "^5.0.1-staging.9",
+    "document-model": "dev",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
@@ -86,21 +85,21 @@
     "@electric-sql/pglite": "^0.2.17",
     "@eslint/js": "^9.37.0",
     "@powerhousedao/analytics-engine-core": "^0.5.0",
-    "@powerhousedao/codegen": "^5.0.1-staging.9",
-    "@powerhousedao/config": "^5.0.1-staging.9",
-    "@powerhousedao/connect": "^5.0.1-staging.9",
-    "@powerhousedao/ph-cli": "^5.0.1-staging.9",
-    "@powerhousedao/reactor-api": "^5.0.1-staging.9",
-    "@powerhousedao/reactor-browser": "^5.0.1-staging.9",
-    "@powerhousedao/reactor-local": "^5.0.1-staging.9",
+    "@powerhousedao/codegen": "dev",
+    "@powerhousedao/config": "dev",
+    "@powerhousedao/connect": "dev",
+    "@powerhousedao/ph-cli": "dev",
+    "@powerhousedao/reactor-api": "dev",
+    "@powerhousedao/reactor-browser": "dev",
+    "@powerhousedao/reactor-local": "dev",
     "@powerhousedao/scalars": "2.0.1",
-    "@powerhousedao/switchboard": "^5.0.1-staging.9",
+    "@powerhousedao/switchboard": "dev",
     "@tailwindcss/cli": "^4.1.14",
     "@types/node": "^22.13.11",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
-    "document-drive": "^5.0.1-staging.9",
+    "document-drive": "dev",
     "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
