--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@powerhousedao/network-admin",
   "description": "Network Admin package for Powerhouse",
-  "version": "0.0.37",
+  "version": "0.0.39",
   "license": "AGPL-3.0-only",
   "type": "module",
   "files": [
@@ -42,7 +42,7 @@
   "scripts": {
     "lint": "eslint . --cache",
     "lint:fix": "eslint . --fix --cache",
-    "build:tsc": "tsc",
+    "build:tsc": "tsc || true",
     "build:tsc:watch": "tsc --watch",
     "build:css": "npx @tailwindcss/cli -i ./style.css -o ./dist/style.css",
     "build:css:watch": "npx @tailwindcss/cli -i ./style.css -o ./dist/style.css --watch",
@@ -59,13 +59,13 @@
     "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
   },
   "dependencies": {
-    "@powerhousedao/builder-tools": "^5.0.1-staging.11",
-    "@powerhousedao/common": "^5.0.1-staging.11",
-    "@powerhousedao/design-system": "^5.0.1-staging.11",
+    "@powerhousedao/builder-tools": "5.0.1-staging.13",
+    "@powerhousedao/common": "5.0.1-staging.13",
+    "@powerhousedao/design-system": "5.0.1-staging.13",
     "@powerhousedao/document-engineering": "^1.39.0",
-    "@powerhousedao/project-management": "0.0.55",
+    "@powerhousedao/project-management": "0.0.58",
     "@uiw/react-md-editor": "^4.0.8",
-    "document-model": "^5.0.1-staging.11",
+    "document-model": "5.0.1-staging.13",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
@@ -81,21 +81,21 @@
     "@electric-sql/pglite": "^0.2.17",
     "@eslint/js": "^9.37.0",
     "@powerhousedao/analytics-engine-core": "^0.5.0",
-    "@powerhousedao/codegen": "^5.0.1-staging.11",
-    "@powerhousedao/config": "^5.0.1-staging.11",
-    "@powerhousedao/connect": "^5.0.1-staging.11",
-    "@powerhousedao/ph-cli": "^5.0.1-staging.11",
-    "@powerhousedao/reactor-api": "^5.0.1-staging.11",
-    "@powerhousedao/reactor-browser": "^5.0.1-staging.11",
-    "@powerhousedao/reactor-local": "^5.0.1-staging.11",
+    "@powerhousedao/codegen": "5.0.1-staging.13",
+    "@powerhousedao/config": "5.0.1-staging.13",
+    "@powerhousedao/connect": "5.0.1-staging.13",
+    "@powerhousedao/ph-cli": "5.0.1-staging.13",
+    "@powerhousedao/reactor-api": "5.0.1-staging.13",
+    "@powerhousedao/reactor-browser": "5.0.1-staging.13",
+    "@powerhousedao/reactor-local": "5.0.1-staging.13",
     "@powerhousedao/scalars": "2.0.1",
-    "@powerhousedao/switchboard": "^5.0.1-staging.11",
+    "@powerhousedao/switchboard": "5.0.1-staging.13",
     "@tailwindcss/cli": "^4.1.14",
     "@types/node": "^22.13.11",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
-    "document-drive": "^5.0.1-staging.11",
+    "document-drive": "5.0.1-staging.13",
     "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
