--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@powerhousedao/network-admin",
   "description": "Network Admin package for Powerhouse",
-  "version": "0.0.42",
+  "version": "0.0.43",
   "license": "AGPL-3.0-only",
   "type": "module",
   "files": [
@@ -67,13 +67,13 @@
     "migrate": "ph-cli migrate"
   },
   "dependencies": {
-    "@powerhousedao/builder-tools": "^5.0.1-staging.15",
-    "@powerhousedao/common": "^5.0.1-staging.15",
-    "@powerhousedao/design-system": "^5.0.1-staging.15",
+    "@powerhousedao/builder-tools": "5.0.1-staging.15",
+    "@powerhousedao/common": "5.0.1-staging.15",
+    "@powerhousedao/design-system": "5.0.1-staging.15",
     "@powerhousedao/document-engineering": "^1.39.0",
-    "@powerhousedao/project-management": "0.0.62",
+    "@powerhousedao/project-management": "0.0.63",
     "@uiw/react-md-editor": "^4.0.8",
-    "document-model": "^5.0.1-staging.15",
+    "document-model": "5.0.1-staging.15",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
@@ -89,21 +89,21 @@
     "@eslint/js": "^9.37.0",
     "@openfeature/core": "^1.9.1",
     "@powerhousedao/analytics-engine-core": "^0.5.0",
-    "@powerhousedao/codegen": "^5.0.1-staging.15",
-    "@powerhousedao/config": "^5.0.1-staging.15",
-    "@powerhousedao/connect": "^5.0.1-staging.15",
-    "@powerhousedao/ph-cli": "^5.0.1-staging.15",
-    "@powerhousedao/reactor-api": "^5.0.1-staging.15",
-    "@powerhousedao/reactor-browser": "^5.0.1-staging.15",
-    "@powerhousedao/reactor-local": "^5.0.1-staging.15",
+    "@powerhousedao/codegen": "5.0.1-staging.15",
+    "@powerhousedao/config": "5.0.1-staging.15",
+    "@powerhousedao/connect": "5.0.1-staging.15",
+    "@powerhousedao/ph-cli": "5.0.1-staging.15",
+    "@powerhousedao/reactor-api": "5.0.1-staging.15",
+    "@powerhousedao/reactor-browser": "5.0.1-staging.15",
+    "@powerhousedao/reactor-local": "5.0.1-staging.15",
     "@powerhousedao/scalars": "2.0.1",
-    "@powerhousedao/switchboard": "^5.0.1-staging.15",
+    "@powerhousedao/switchboard": "5.0.1-staging.15",
     "@tailwindcss/cli": "^4.1.14",
     "@types/node": "^22.13.11",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
-    "document-drive": "^5.0.1-staging.15",
+    "document-drive": "5.0.1-staging.15",
     "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
