ph init 5.0.1-staging.15

--- a/powerhouse.manifest.json
+++ b/powerhouse.manifest.json
@@ -9,14 +9,6 @@
     "documentModels": [],
     "editors": [],
     "apps": [],
-    "subgraphs": [
-        {
-            "id": "powerhouse/network-profile-subgraph",
-            "name": "Network Profile Subgraph",
-            "documentTypes": [
-                "powerhouse/network-profile"
-            ]
-        }
-    ],
+    "subgraphs": [],
     "importScripts": []
 }
