--- a/package.json
+++ b/package.json
@@ -10,70 +10,62 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "import": "./dist/index.js"
     },
     "./document-models": {
       "types": "./dist/document-models/index.d.ts",
-      "default": "./dist/document-models/index.js"
+      "import": "./dist/document-models/index.js"
     },
     "./editors": {
       "types": "./dist/editors/index.d.ts",
-      "default": "./dist/editors/index.js"
+      "import": "./dist/editors/index.js"
     },
-    "./subgraphs": {
-      "types": "./dist/subgraphs/index.d.ts",
-      "default": "./dist/subgraphs/index.js"
-    },
-    "./processors": {
-      "types": "./dist/processors/index.d.ts",
-      "default": "./dist/processors/index.js"
-    },
-    "./manifest": {
-      "default": "./dist/powerhouse.manifest.json"
-    },
-    "./style.css": "./dist/style.css",
     "./document-models/*": {
       "types": "./dist/document-models/*/index.d.ts",
-      "default": "./dist/document-models/*/index.js"
+      "import": "./dist/document-models/*/index.js"
     },
     "./editors/*": {
       "types": "./dist/editors/*/index.d.ts",
-      "default": "./dist/editors/*/index.js"
-    }
+      "import": "./dist/editors/*/index.js"
+    },
+    "./subgraphs": {
+      "types": "./dist/subgraphs/index.d.ts",
+      "import": "./dist/subgraphs/index.js"
+    },
+    "./processors": {
+      "types": "./dist/processors/index.d.ts",
+      "import": "./dist/processors/index.js"
+    },
+    "./manifest": "./dist/powerhouse.manifest.json",
+    "./style.css": "./dist/style.css"
   },
   "scripts": {
-    "lint": "eslint --config eslint.config.js --cache --cache-strategy content",
-    "lint:fix": "npm run lint --fix",
-    "build:tsc": "tsc",
-    "build:tsc:watch": "tsc --watch",
-    "build:css": "npx @tailwindcss/cli -i ./style.css -o ./dist/style.css",
-    "build:css:watch": "npx @tailwindcss/cli -i ./style.css -o ./dist/style.css --watch",
     "build": "npm run tsc && npm run tailwind",
     "test": "vitest run",
     "test:watch": "vitest",
-    "typecheck": "tsc --noEmit",
+    "lint": "eslint --config eslint.config.js --cache --cache-strategy content",
+    "lint:fix": "npm run lint --fix",
+    "tsc": "tsc",
+    "tsc:watch": "tsc --watch",
+    "tailwind": "npx @tailwindcss/cli -i ./style.css -o ./dist/style.css",
     "prepublishOnly": "npm run build",
+    "check-circular-imports": "npx dpdm -T ./index.ts",
     "generate": "ph-cli generate",
     "connect": "ph-cli connect",
     "reactor": "ph-cli reactor",
     "service": "ph-cli service",
-    "service-startup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-startup.sh",
-    "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh",
-    "tsc": "tsc",
-    "tsc:watch": "tsc --watch",
-    "tailwind": "npx @tailwindcss/cli -i ./style.css -o ./dist/style.css",
-    "check-circular-imports": "npx dpdm -T ./index.ts",
     "vetra": "ph-cli vetra",
-    "migrate": "ph-cli migrate"
+    "service-startup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-startup.sh",
+    "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
   },
   "dependencies": {
-    "@powerhousedao/builder-tools": "5.0.1-staging.15",
-    "@powerhousedao/common": "5.0.1-staging.15",
-    "@powerhousedao/design-system": "5.0.1-staging.15",
-    "@powerhousedao/document-engineering": "^1.39.0",
+    "@powerhousedao/builder-tools": "^5.0.1-staging.15",
+    "@powerhousedao/common": "^5.0.1-staging.15",
+    "@powerhousedao/design-system": "^5.0.1-staging.15",
+    "@powerhousedao/document-engineering": "^1.38.0",
     "@powerhousedao/project-management": "0.0.63",
     "@uiw/react-md-editor": "^4.0.8",
-    "document-model": "5.0.1-staging.15",
+    "document-model": "^5.0.1-staging.15",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
@@ -81,53 +73,46 @@
     "luxon": "^3.7.2",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@electric-sql/pglite": "^0.2.17",
-    "@eslint/js": "^9.37.0",
-    "@openfeature/core": "^1.9.1",
+    "@electric-sql/pglite": "^0.2.12",
+    "@eslint/js": "^9.38.0",
     "@powerhousedao/analytics-engine-core": "^0.5.0",
-    "@powerhousedao/codegen": "5.0.1-staging.15",
-    "@powerhousedao/config": "5.0.1-staging.15",
-    "@powerhousedao/connect": "5.0.1-staging.15",
-    "@powerhousedao/ph-cli": "5.0.1-staging.15",
-    "@powerhousedao/reactor-api": "5.0.1-staging.15",
-    "@powerhousedao/reactor-browser": "5.0.1-staging.15",
-    "@powerhousedao/reactor-local": "5.0.1-staging.15",
-    "@powerhousedao/scalars": "2.0.1",
-    "@powerhousedao/switchboard": "5.0.1-staging.15",
-    "@tailwindcss/cli": "^4.1.14",
-    "@types/node": "^22.13.11",
+    "@powerhousedao/codegen": "^5.0.1-staging.15",
+    "@powerhousedao/config": "^5.0.1-staging.15",
+    "@powerhousedao/ph-cli": "^5.0.1-staging.15",
+    "@powerhousedao/reactor-api": "^5.0.1-staging.15",
+    "@powerhousedao/reactor-browser": "^5.0.1-staging.15",
+    "@powerhousedao/reactor-local": "^5.0.1-staging.15",
+    "@powerhousedao/scalars": "staging",
+    "@powerhousedao/switchboard": "^5.0.1-staging.15",
+    "@powerhousedao/connect": "^5.0.1-staging.15",
+    "@tailwindcss/cli": "^4.1.4",
+    "@testing-library/react": "^16.3.0",
+    "@types/node": "^24.9.2",
     "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.0.4",
-    "document-drive": "5.0.1-staging.15",
-    "eslint": "^9.37.0",
+    "@vitejs/plugin-react": "^5.1.0",
+    "document-drive": "^5.0.1-staging.15",
+    "eslint": "^9.38.0",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.0.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
+    "package-manager-detector": "^0.2.8",
     "pm2": "^5.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "storybook": "^8.6.14",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0",
+    "typescript-eslint": "^8.46.2",
     "vite": "^6.2.3",
-    "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "^3.0.9"
   },
   "peerDependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
-  },
-  "overrides": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "vite": "^6.2.3"
-  },
-  "readme": "ERROR: No README data found!",
-  "_id": "@powerhousedao/network-admin@0.0.42"
+  }
 }
