--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@powerhousedao/network-admin",
   "description": "Network Admin package for Powerhouse",
-  "version": "0.0.48",
+  "version": "0.0.49",
   "license": "AGPL-3.0-only",
   "type": "module",
   "files": [
@@ -62,13 +62,13 @@
     "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
   },
   "dependencies": {
-    "@powerhousedao/builder-tools": "^5.0.1-staging.15",
-    "@powerhousedao/common": "^5.0.1-staging.15",
-    "@powerhousedao/design-system": "^5.0.1-staging.15",
+    "@powerhousedao/builder-tools": "^5.0.12",
+    "@powerhousedao/common": "^5.0.12",
+    "@powerhousedao/design-system": "^5.0.12",
     "@powerhousedao/document-engineering": "^1.38.0",
-    "@powerhousedao/project-management": "0.0.63",
+    "@powerhousedao/project-management": "0.0.64",
     "@uiw/react-md-editor": "^4.0.8",
-    "document-model": "^5.0.1-staging.15",
+    "document-model": "^5.0.12",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
@@ -82,21 +82,21 @@
     "@electric-sql/pglite": "^0.2.12",
     "@eslint/js": "^9.38.0",
     "@powerhousedao/analytics-engine-core": "^0.5.0",
-    "@powerhousedao/codegen": "^5.0.1-staging.15",
-    "@powerhousedao/config": "^5.0.1-staging.15",
-    "@powerhousedao/connect": "^5.0.1-staging.15",
-    "@powerhousedao/ph-cli": "^5.0.1-staging.15",
-    "@powerhousedao/reactor-api": "^5.0.1-staging.15",
-    "@powerhousedao/reactor-browser": "^5.0.1-staging.15",
-    "@powerhousedao/reactor-local": "^5.0.1-staging.15",
+    "@powerhousedao/codegen": "^5.0.12",
+    "@powerhousedao/config": "^5.0.12",
+    "@powerhousedao/connect": "^5.0.12",
+    "@powerhousedao/ph-cli": "^5.0.12",
+    "@powerhousedao/reactor-api": "^5.0.12",
+    "@powerhousedao/reactor-browser": "^5.0.12",
+    "@powerhousedao/reactor-local": "^5.0.12",
     "@powerhousedao/scalars": "staging",
-    "@powerhousedao/switchboard": "^5.0.1-staging.15",
+    "@powerhousedao/switchboard": "^5.0.12",
     "@tailwindcss/cli": "^4.1.4",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^24.9.2",
     "@types/react": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
-    "document-drive": "^5.0.1-staging.15",
+    "document-drive": "^5.0.12",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
