--- a/powerhouse.config.json
+++ b/powerhouse.config.json
@@ -14,6 +14,11 @@
       "packageName": "@powerhousedao/project-management",
       "version": "0.0.65",
       "provider": "npm"
+    },
+    {
+      "packageName": "@powerhousedao/builder-profile",
+      "version": "0.0.5",
+      "provider": "npm"
     }
   ]
 }
